--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "test_sqllite",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
